--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
-.container{
+.mainbg{
     background-image: url(../images/background.jpg);
 }
-h1,h2,.lead{
-    background-color:#35555f;
+
+h2{
     color:#fff;
 }
